[package]
name = "service-util"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dotenvy = "0.15.7"
env_logger = "0.11.9"
envconfig = "0.11.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["net"] }
tower-http = { version = "0.6.8", features = ["cors"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
