[package]
name = "sevria-service-util"
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sevria/service-util"
homepage = "https://github.com/sevria/service-util"
description = "Reusable utilities for backend service development."

[dependencies]
